# Vision-Based-Desktop-Automation

./: .gitignore  CODE_EXPLANATION.md  README.md  capture_annotated_screenshots.py  main.py  pyproject.toml  requirements.txt
